--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -11,23 +11,23 @@ main {
     background-color: map-get($color, backgroundContenido);
 
     .grid__eM:nth-of-type(1) {
-        grid-column: 2 / 8;
-        grid-row: 3 / 4;
+        grid-column: 1 / 13;
+        grid-row: 1 / 6;
         display: flex;
         flex-flow: row wrap;
         justify-content: space-between;
     }
 
     .grid__eM:nth-of-type(2) {
-        grid-column: 7 / 12;
-        grid-row: 3 / 4;
+        grid-column: 2 / 10;
+        grid-row: 3/5;
         display: flex;
-        flex-flow: row-wrap;
-        align-items: center;
+        flex-flow: column;
+    
     }
 
     .grid__eM {
-        img {
+        video {
             width: 100%;
             height: 100%;
             object-fit: cover;
@@ -37,7 +37,7 @@ main {
             width: 65%;
             height: 35%;
             padding: 30px;
-            background-color: rgba(240, 240, 240, 0.39);
+            background-color: rgba(240, 240, 240, 0.575);
             display: flex;
             align-items: center;
         }
@@ -70,15 +70,17 @@ main {
 
         .grid__eM:nth-of-type(1) {
             grid-column: 1 /6;
-            grid-row: 2/ 3;
+            grid-row: 1/ 5;
             display: flex;
-            flex-flow: row wrap;
+            flex-flow: row-wrap;
             justify-content: space-between;
         }
 
         .grid__eM:nth-of-type(2) {
             grid-column: 2 / 5;
             grid-row: 1 / 2;
+            justify-content: center;
+            padding-top: 110px;
         }
 
         .grid__eM {
@@ -91,7 +93,7 @@ main {
             div {
                 margin: 25px;
                 height: 20%;
-                background-color: rgba(240, 240, 240, 0.39);
+                background-color: rgba(240, 240, 240, 0.651);
                 display: flex;
                 align-items: center;
                 border-radius: 6px;
@@ -124,14 +126,12 @@ main {
         background-color: map-get($color,backgroundContenido);
         .grid__eM:nth-of-type(1) {
             grid-column: 1 /6;
-            grid-row: 2/ 3;
-            display: flex;
-            flex-flow: row wrap;
-            justify-content: space-between;
+            grid-row: 1/ 5;
+            
         }
         .grid__eM:nth-of-type(2) {
             grid-column: 2 / 5;
-            grid-row: 1 / 2;
+            grid-row: 2 / 3;
         }
         .grid__eM{
             img {
@@ -142,7 +142,7 @@ main {
             div {
                 margin: 25px;
                 height: 20%;
-                background-color: rgba(240, 240, 240, 0.39);
+                background-color: rgba(240, 240, 240, 0.603);
                 display: flex;
                 align-items: center;
                 border-radius: 6px;
@@ -152,7 +152,8 @@ main {
             }
             h2 {
                 text-align: center;
-                font-size: 1em;
+                font-size: 1.3em;
+                color: map-get($color,color_textTituloMed);
                 display: flex;
                 flex-flow: column;
                 justify-content: center;
