--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -7,21 +7,21 @@
 @mixin nav ($brecha) {
     display: flex;
     flex-flow: column;
-    justify-content: flex-start;
-    background-image: linear-gradient(45deg, rgb(0, 0, 0), rgba(0, 0, 0, 0.0));
-    height: 100vh;
+    background-image: linear-gradient(45deg, rgb(0, 0, 0), rgba(0, 0, 0, 0));
     position: absolute;
-    top: 0;
+    height: 100vh;
+    width: 100vw;
+    top: 107px;
     bottom: 0;
     left: 0;
     right: 0;
-    padding: 0;
     display: grid;
-    align-content: center;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: space-evenly;
     gap: $brecha;
     padding-left: 5%;
     transform: var(--state-menu);
     transition: .3s transform;
     z-index: 1;
-    
 }
