--- a/styles/partials/_sobremi.scss
+++ b/styles/partials/_sobremi.scss
@@ -31,7 +31,7 @@
         padding-top: 5px;
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
         @extend %radioImagen;
     }
 
@@ -39,10 +39,10 @@
         padding-bottom: 15px;
     }
 
-    img {
+    video {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
         @extend %radioImagen;
     }
 
