--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@
   background-color: rgb(24, 24, 24);
 }
 
-.grid__sM img, .grid__sM .grid__contenido:nth-of-type(3) {
+.grid__sM video, .grid__sM .grid__contenido:nth-of-type(3) {
   border-bottom-right-radius: 75px;
   border-bottom-left-radius: 75px;
   border-top-left-radius: 35px;
@@ -84,6 +84,9 @@ header {
   header {
     grid-area: header;
   }
+  .cabecera .cabecera__logo {
+    z-index: 1;
+  }
   .cabecera .nav {
     --state-close: scale(0);
     --state-hamburger: scale(1);
@@ -121,17 +124,18 @@ header {
     /* display: none; */
     display: flex;
     flex-flow: column;
-    justify-content: flex-start;
     background-image: linear-gradient(45deg, rgb(0, 0, 0), rgba(0, 0, 0, 0));
-    height: 100vh;
     position: absolute;
-    top: 0;
+    height: 100vh;
+    width: 100vw;
+    top: 107px;
     bottom: 0;
     left: 0;
     right: 0;
-    padding: 0;
     display: grid;
-    align-content: center;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: space-evenly;
     gap: 2rem;
     padding-left: 5%;
     transform: var(--state-menu);
@@ -180,17 +184,18 @@ header {
     /* display: none; */
     display: flex;
     flex-flow: column;
-    justify-content: flex-start;
     background-image: linear-gradient(45deg, rgb(0, 0, 0), rgba(0, 0, 0, 0));
-    height: 100vh;
     position: absolute;
-    top: 0;
+    height: 100vh;
+    width: 100vw;
+    top: 107px;
     bottom: 0;
     left: 0;
     right: 0;
-    padding: 0;
     display: grid;
-    align-content: center;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: space-evenly;
     gap: 3.5rem;
     padding-left: 5%;
     transform: var(--state-menu);
@@ -215,20 +220,19 @@ main {
   background-color: rgba(211, 150, 106, 0.466);
 }
 .grid .grid__eM:nth-of-type(1) {
-  grid-column: 2/8;
-  grid-row: 3/4;
+  grid-column: 1/13;
+  grid-row: 1/6;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
 }
 .grid .grid__eM:nth-of-type(2) {
-  grid-column: 7/12;
-  grid-row: 3/4;
+  grid-column: 2/10;
+  grid-row: 3/5;
   display: flex;
-  flex-flow: row-wrap;
-  align-items: center;
+  flex-flow: column;
 }
-.grid .grid__eM img {
+.grid .grid__eM video {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -238,7 +242,7 @@ main {
   width: 65%;
   height: 35%;
   padding: 30px;
-  background-color: rgba(240, 240, 240, 0.39);
+  background-color: rgba(240, 240, 240, 0.575);
   display: flex;
   align-items: center;
 }
@@ -266,14 +270,16 @@ main {
   }
   .grid .grid__eM:nth-of-type(1) {
     grid-column: 1/6;
-    grid-row: 2/3;
+    grid-row: 1/5;
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row-wrap;
     justify-content: space-between;
   }
   .grid .grid__eM:nth-of-type(2) {
     grid-column: 2/5;
     grid-row: 1/2;
+    justify-content: center;
+    padding-top: 110px;
   }
   .grid .grid__eM img {
     width: 100%;
@@ -284,7 +290,7 @@ main {
   .grid .grid__eM div {
     margin: 25px;
     height: 20%;
-    background-color: rgba(240, 240, 240, 0.39);
+    background-color: rgba(240, 240, 240, 0.651);
     display: flex;
     align-items: center;
     border-radius: 6px;
@@ -313,14 +319,11 @@ main {
   }
   .grid .grid__eM:nth-of-type(1) {
     grid-column: 1/6;
-    grid-row: 2/3;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
+    grid-row: 1/5;
   }
   .grid .grid__eM:nth-of-type(2) {
     grid-column: 2/5;
-    grid-row: 1/2;
+    grid-row: 2/3;
   }
   .grid .grid__eM img {
     width: 100%;
@@ -331,7 +334,7 @@ main {
   .grid .grid__eM div {
     margin: 25px;
     height: 20%;
-    background-color: rgba(240, 240, 240, 0.39);
+    background-color: rgba(240, 240, 240, 0.603);
     display: flex;
     align-items: center;
     border-radius: 6px;
@@ -341,7 +344,8 @@ main {
   }
   .grid .grid__eM h2 {
     text-align: center;
-    font-size: 1em;
+    font-size: 1.3em;
+    color: rgb(44, 44, 44);
     display: flex;
     flex-flow: column;
     justify-content: center;
@@ -360,7 +364,7 @@ footer {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
-  padding: 40px;
+  padding: 30px;
   height: 5.5rem;
   background-color: rgba(211, 150, 106, 0.466);
   align-items: flex-start;
@@ -395,18 +399,18 @@ footer {
     align-items: flex-start;
   }
   .pie h2 {
-    font-size: 0.6rem;
+    font-size: 1rem;
     font-weight: 120px;
     color: rgb(63, 63, 63);
   }
   .pie .bx {
-    font-size: 1rem;
+    font-size: 1.5rem;
     color: black;
   }
   .pie .pie__ul {
     display: flex;
     flex-flow: row wrap;
-    gap: 1.8rem;
+    gap: 3.5rem;
     justify-content: space-evenly;
   }
   .pie .pie__ul li {
@@ -424,18 +428,18 @@ footer {
     align-items: flex-start;
   }
   .pie h2 {
-    font-size: 0.9rem;
+    font-size: 1.2rem;
     font-weight: 120px;
     color: rgb(63, 63, 63);
   }
   .pie .bx {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     color: black;
   }
   .pie .pie__ul {
     display: flex;
     flex-flow: row wrap;
-    gap: 2rem;
+    gap: 3.5rem;
     justify-content: space-evenly;
   }
   .pie .pie__ul li {
@@ -475,17 +479,17 @@ footer {
   padding-top: 5px;
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .grid__sM h1 {
   padding-bottom: 15px;
 }
-.grid__sM img {
+.grid__sM video {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .grid__sM .grid__linea {
   position: relative;
