--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -84,7 +84,7 @@ main {
         }
 
         .grid__eM {
-            img {
+            video {
                 width: 100%;
                 height: 100%;
                 object-fit: contain;
@@ -134,7 +134,7 @@ main {
             grid-row: 2 / 3;
         }
         .grid__eM{
-            img {
+            video {
                 width: 100%;
                 height: 100%;
                 object-fit: contain;
