--- a/styles/styles.css
+++ b/styles/styles.css
@@ -281,7 +281,7 @@ main {
     justify-content: center;
     padding-top: 110px;
   }
-  .grid .grid__eM img {
+  .grid .grid__eM video {
     width: 100%;
     height: 100%;
     -o-object-fit: contain;
@@ -325,7 +325,7 @@ main {
     grid-column: 2/5;
     grid-row: 2/3;
   }
-  .grid .grid__eM img {
+  .grid .grid__eM video {
     width: 100%;
     height: 100%;
     -o-object-fit: contain;
