--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -87,7 +87,7 @@ main {
             video {
                 width: 100%;
                 height: 100%;
-                object-fit: contain;
+                object-fit: cover;
             }
 
             div {
@@ -137,7 +137,7 @@ main {
             video {
                 width: 100%;
                 height: 100%;
-                object-fit: contain;
+                object-fit: cover;
             }
             div {
                 margin: 25px;
