--- a/styles/styles.css
+++ b/styles/styles.css
@@ -284,8 +284,8 @@ main {
   .grid .grid__eM video {
     width: 100%;
     height: 100%;
-    -o-object-fit: contain;
-       object-fit: contain;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
   .grid .grid__eM div {
     margin: 25px;
@@ -328,8 +328,8 @@ main {
   .grid .grid__eM video {
     width: 100%;
     height: 100%;
-    -o-object-fit: contain;
-       object-fit: contain;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
   .grid .grid__eM div {
     margin: 25px;
