--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -78,16 +78,16 @@ main {
 
         .grid__eM:nth-of-type(2) {
             grid-column: 2 / 5;
-            grid-row: 1 / 2;
+            grid-row: 2 / 3;
             justify-content: center;
-            padding-top: 110px;
+            align-items: center;
         }
 
         .grid__eM {
-            img {
+            video {
                 width: 100%;
                 height: 100%;
-                object-fit: contain;
+                object-fit: cover;
             }
 
             div {
@@ -134,10 +134,10 @@ main {
             grid-row: 2 / 3;
         }
         .grid__eM{
-            img {
+            video {
                 width: 100%;
                 height: 100%;
-                object-fit: contain;
+                object-fit: cover;
             }
             div {
                 margin: 25px;
