--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,7 +41,7 @@ header {
   align-items: center;
 }
 .cabecera img {
-  max-width: 3rem;
+  max-width: 4rem;
 }
 .cabecera ul {
   width: 600px;
@@ -118,7 +118,7 @@ header {
     width: 40px;
   }
   .cabecera img {
-    max-width: 3rem;
+    max-width: 4rem;
   }
   .cabecera .cabecera__ul {
     /* display: none; */
@@ -128,7 +128,7 @@ header {
     position: absolute;
     height: 100vh;
     width: 100vw;
-    top: 107px;
+    top: 90px;
     bottom: 0;
     left: 0;
     right: 0;
@@ -178,7 +178,7 @@ header {
     width: 40px;
   }
   .cabecera .cabecera img {
-    max-width: 3rem;
+    max-width: 4rem;
   }
   .cabecera .cabecera__ul {
     /* display: none; */
@@ -188,7 +188,7 @@ header {
     position: absolute;
     height: 100vh;
     width: 100vw;
-    top: 107px;
+    top: 90px;
     bottom: 0;
     left: 0;
     right: 0;
@@ -277,15 +277,15 @@ main {
   }
   .grid .grid__eM:nth-of-type(2) {
     grid-column: 2/5;
-    grid-row: 1/2;
+    grid-row: 2/3;
     justify-content: center;
-    padding-top: 110px;
+    align-items: center;
   }
-  .grid .grid__eM img {
+  .grid .grid__eM video {
     width: 100%;
     height: 100%;
-    -o-object-fit: contain;
-       object-fit: contain;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
   .grid .grid__eM div {
     margin: 25px;
@@ -325,11 +325,11 @@ main {
     grid-column: 2/5;
     grid-row: 2/3;
   }
-  .grid .grid__eM img {
+  .grid .grid__eM video {
     width: 100%;
     height: 100%;
-    -o-object-fit: contain;
-       object-fit: contain;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
   .grid .grid__eM div {
     margin: 25px;
@@ -364,7 +364,7 @@ footer {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
-  padding: 30px;
+  padding: 40px;
   height: 5.5rem;
   background-color: rgba(211, 150, 106, 0.466);
   align-items: flex-start;
@@ -394,28 +394,32 @@ footer {
     grid-area: footer;
   }
   .pie {
-    padding: 15px;
+    padding: 20px;
+    padding-top: 15px;
     height: 4rem;
     align-items: flex-start;
   }
   .pie h2 {
-    font-size: 1rem;
+    font-size: 0.8rem;
     font-weight: 120px;
     color: rgb(63, 63, 63);
   }
   .pie .bx {
-    font-size: 1.5rem;
+    font-size: 2rem;
     color: black;
   }
   .pie .pie__ul {
     display: flex;
     flex-flow: row wrap;
-    gap: 3.5rem;
+    gap: 2rem;
     justify-content: space-evenly;
   }
   .pie .pie__ul li {
     text-decoration: none;
     list-style-type: none;
+  }
+  .bx:active {
+    font-size: 2.6rem;
   }
 }
 @media screen and (min-width: 481px) and (max-width: 760px) {
@@ -423,7 +427,8 @@ footer {
     grid-area: footer;
   }
   .pie {
-    padding: 15px;
+    padding: 25px;
+    padding-bottom: 40px;
     height: 4rem;
     align-items: flex-start;
   }
@@ -439,7 +444,7 @@ footer {
   .pie .pie__ul {
     display: flex;
     flex-flow: row wrap;
-    gap: 3.5rem;
+    gap: 2rem;
     justify-content: space-evenly;
   }
   .pie .pie__ul li {
